--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/theme/white.css">
 </head>
 
 <body>
@@ -19,7 +22,20 @@
             </div>
             <div class="cell auto">
                 <h5>Dune Zerna</h5>
-                <p>I am currently a bachelor student Southern University of Denmark. I mainly work with programming language</p>
+                <p>I am currently a bachelor student Southern University of Denmark. I mainly work with programming and product designs.
+
+                    </br>
+
+                    <section>
+                        <b>Programming Languages</b> C#, Java, HTML, CSS, JavaScript, jQuery, PHP, Python
+                    </section>
+                    </br>
+                    <section>
+                        <b>Experience</b>
+                        </br>
+                        Minecraft PCG Villages 2018 GameJam, Denmark 2018
+                    </section>
+                </p>
             </div>
         </div>
     </div>
@@ -31,7 +47,6 @@
                 <span class="title-bar-title">Dune Zerna</span>
             </div>
         </div>
-
 
         <div class="callout primary">
             <article class="grid-container">
@@ -77,7 +92,7 @@
                         <li><a href="https://plus.google.com/u/0/+DuneZerna?tab=wX" class="fa fa-google"></a></li>
                         <li><a href="https://www.linkedin.com/in/dune-zerna-27306284" class="fa fa-linkedin"></a></li>
                         <li>
-                        <a href="https://www.instagram.com/dunezerna" class="fa fa-instagram"></a>
+                            <a href="https://www.instagram.com/dunezerna" class="fa fa-instagram"></a>
                         </li>
                     </ul>
                 </div>
@@ -97,5 +112,6 @@
             </div>
         </article>
     </div>
+
 </body>
 </html>
