--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             </section>
             <section data-markdown>
                 <textarea data-template>
-                    ## Prototype Projects
-                    
-                    [Proceed](http://hakim.se)
+                    ## Prototype [Projects](file:///C:/Users/Dune%20Zerna/Documents/GitKraken/MP/index2.html)
+
                 </textarea>
             </section>
         </div>
